ordersucess page ok

--- a/Pages/checkout.html
+++ b/Pages/checkout.html
@@ -689,7 +689,7 @@
 
             <section class="brigtcamp ">
                 <div class="my-container">
-                    <ul class="my-d-flex my-mt-4 my-align-center my-gap-5 brigtcamp-area">
+                    <ul class="my-d-flex my-mt-2 my-align-center my-gap-5 brigtcamp-area">
                         <li><a href="../index.html">Home</a> </li>
                         <li>Checkout</li>
                     </ul>
@@ -698,7 +698,7 @@
 
 
 
-            <section class="">
+            <section class="checkout">
                 <div class="my-container">
                     <div class="head checkout-head">
                         <h2>Checkout</h2>
@@ -708,10 +708,10 @@
                         </p>
                     </div>
 
-                    <div class="checkout-area my-mt-8">
+                    <div class="checkout-area my-mt-4">
 
                         <!--*****  Left Delivary and Cart  *****-->
-                        <div class="left my-flex-column my-gap-8">
+                        <div class="left my-flex-column my-gap-10">
                             <div class="address-area">
 
                                 <!-- address head -->
@@ -832,7 +832,6 @@
                                 </div>
                             </div>
 
-                            <div class="my-border-top"></div>
 
 
 
@@ -854,7 +853,6 @@
 
 
 
-                            <div class="my-border-top"></div>
 
 
 
@@ -967,7 +965,7 @@
                         <!-- Left Delivary and Cart -->
                         <div class="right">
 
-                            <div class="my-border2 my-radius-md my-p-4">
+                            <div class="my-border2 right-area my-radius-md my-p-4">
                                 <!--*****  Order Details  ***** -->
                                 <div class="order-details">
                                     <h5 class="my-fw-bolder">Order Details</h5>
@@ -1065,7 +1063,8 @@
                                     </form>
 
                                     <div class="my-mt-5">
-                                        <button class="my-btn my-secendary-btn"><span>Confrim Order</span></button>
+                                        <a href="../Pages/order_complete.html"
+                                            class="my-btn my-secendary-btn"><span>Confrim Order</span></a>
                                     </div>
                                 </div>
                             </div>
