order details page ok

--- a/index.html
+++ b/index.html
@@ -764,7 +764,6 @@
                     </div>
                 </div>
 
-                </div>
             </section>
 
 
@@ -875,7 +874,7 @@
                             </a>
                             <!-- single category -->
                             <a href="./Pages/category.html" class="item my-card ">
-                                <img src="https://i.ibb.co.com/LxhJq46/slider3.png" alt="slider3" border="0" />
+                                <img src="https://i.ibb.co.com/LxhJq46/slider3.png" alt="slider3" />
                                 <h6 class="my-text-center my-mt-2">
                                     Vagetables
                                 </h6>
@@ -925,8 +924,7 @@
                             <!-- single category -->
                             <a href="./Pages/category.html" class="item my-card ">
                                 <img src="https://i.ibb.co.com/TgZ75nw/GUEST-6e5826d3-d65a-4fce-9933-382a2f7d67ac-wid-315-hei-315-qlt-60-fmt-webp.webp"
-                                    alt="GUEST-6e5826d3-d65a-4fce-9933-382a2f7d67ac-wid-315-hei-315-qlt-60-fmt-webp"
-                                    border="0">
+                                    alt="GUEST-6e5826d3-d65a-4fce-9933-382a2f7d67ac-wid-315-hei-315-qlt-60-fmt-webp">
                                 <h6 class="my-text-center my-mt-2">
                                     Baby Kit
                                 </h6>
@@ -2109,16 +2107,16 @@
                                     <div>
                                         <div class="tab-buttons my-flex-center my-flex-sm-column  my-gap-0">
                                             <button class="active" data-tab="1">
-                                                <div>Top Selling </div>
+                                                <span>Top Selling </span>
                                             </button>
                                             <button class="" data-tab="2">
-                                                <div>Top Rating </div>
+                                                <span>Top Rating </span>
                                             </button>
                                             <button data-tab="3">
-                                                <div>New Products</div>
+                                                <span>New Products</span>
                                             </button>
                                             <button data-tab="4">
-                                                <div>This Week</div>
+                                                <span>This Week</span>
                                             </button>
                                         </div>
 
@@ -3064,6 +3062,7 @@
                         </div>
 
                     </div>
+                </div>
             </section>
 
 
@@ -3144,7 +3143,7 @@
                             <p>Join our email subscription now to get updates on promotions and coupons.</p>
 
                             <form action="#">
-                                <input type=" text" placeholder="Type Email">
+                                <input type="text" placeholder="Type Email">
                                 <a href="#" class="my-btn my-primary-btn"><span>Sign UP</span></a>
                             </form>
                         </div>
@@ -4526,7 +4525,6 @@
                     </div>
                 </div>
             </div>
-            </div>
         </footer>
 
 
@@ -4624,7 +4622,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/qgQ6k1b/cart-2.jpg" alt="cart-2" border="0">
+                                        <img src="https://i.ibb.co.com/qgQ6k1b/cart-2.jpg" alt="cart-2">
                                     </div>
 
                                     <!-- information -->
@@ -4671,7 +4669,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/Yp1Sgz9/cart-3.jpg" alt="cart-3" border="0">
+                                        <img src="https://i.ibb.co.com/Yp1Sgz9/cart-3.jpg" alt="cart-3">
                                     </div>
 
                                     <!-- information -->
@@ -4723,7 +4721,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/LCYvt9w/cart-4.jpg" alt="cart-4" border="0">
+                                        <img src="https://i.ibb.co.com/LCYvt9w/cart-4.jpg" alt="cart-4">
                                     </div>
 
                                     <!-- information -->
@@ -4769,7 +4767,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/pfqNHWp/cart-5.jpg" alt="cart-5" border="0">
+                                        <img src="https://i.ibb.co.com/pfqNHWp/cart-5.jpg" alt="cart-5">
                                     </div>
 
                                     <!-- information -->
@@ -4872,8 +4870,8 @@
                     </div>
                 </div>
                 <div class="footer my-flex-between">
-                    <button class="my-btn my-primary-btn"><a href="index.html">Continue Shopping</a></button>
-                    <button class="my-secendary-btn my-btn"><span>Update Cart</span></button>
+                    <a class="my-btn my-primary-btn" href="./index.html"><span>Continue Shopping</span></a>
+                    <a href="./Pages/checkout.html" class="my-secendary-btn my-btn"><span>Checkout</span></a>
                 </div>
             </div>
         </div>
@@ -4918,8 +4916,8 @@
                             </div>
 
                             <div class="my-input-control">
-                                <input type="text" id="passowrd" required>
-                                <label class="label" for="password">Password</label>
+                                <input type="password" id="password2" required>
+                                <label class="label" for="password2">Password</label>
                             </div>
 
                             <div>
@@ -4969,13 +4967,13 @@
                         <form action="#" class="my-mt-10 my-flex-column my-gap-5">
 
                             <div class="my-input-control">
-                                <input type="email" id="email" required>
-                                <label class="label" for="email">Email</label>
+                                <input type="email" id="email_login" required>
+                                <label class="label" for="email_login">Email</label>
                             </div>
 
                             <div class="my-input-control">
-                                <input type="text" id="passowrd" required>
-                                <label class="label" for="password">Password</label>
+                                <input type="password" id="passwords" required>
+                                <label class="label" for="passwords">Password</label>
                             </div>
 
                             <div>
@@ -5013,7 +5011,7 @@
                                         class="my-fw-bold my-text-primary">Register</button>
                                 </p>
 
-                                <p class="my-fs-xs">Loss your password? <button id="register-btn"
+                                <p class="my-fs-xs">Loss your password? <button
                                         class="my-fw-bold my-text-primary my-fs-xs">forgot password</button>
                                 </p>
                             </div>
