added a delivary body section

--- a/Pages/order_details.html
+++ b/Pages/order_details.html
@@ -691,7 +691,7 @@
                 <div class="my-container">
                     <ul class="my-d-flex my-mt-2 my-align-center my-gap-5 brigtcamp-area">
                         <li><a href="../index.html">Home</a> </li>
-                        <li><a href="../index.html">Orders</a> </li>
+                        <li><a href="../Pages/orders.html">Orders</a> </li>
                         <li>Order Details</li>
                     </ul>
                 </div>
@@ -788,29 +788,50 @@
                                         </div>
                                     </div>
                                 </div>
-
                             </div>
 
-                            <div class="my-mt-6 my-grid-2 my-gap-4 my-grid-md-1">
-                                <div class="my-card my-justify-center my-align-center my-flex-column my-gap-3">
-                                    <div class="my-card my-w-50 my-w-sm-100 my-d-flex my-align-center">
-                                        <h5>Order Date :</h5>
-                                        <p class="my-fs-xs my-ml-6 my-pl-4">23 Jan 2024</p>
+                            <!-- Delivary Boy -->
+                            <div class="my-mt-4 delivary-boy">
+                                <div class="my-card ">
+                                    <div class="icon"><i class="fa-solid fa-dolly"></i></div>
+                                    <h4 class="head">Delivary Boy</h4>
+                                    <div class="my-d-flex my-align-start my-gap-4 my-mt-6">
+                                        <div><img class="profile-img" src="../Static/images/profile2.png" alt=""></div>
+                                        <div>
+                                            <h5 class="my-text-gray">Md Foysal Khan</h5>
+                                            <p class="my-mt-1 my-text-gray">019827 373673</p>
+                                        </div>
                                     </div>
-
-                                    <div class="my-card my-w-50 my-w-sm-100 my-d-flex my-align-center">
-                                        <h5>Bank Info :</h5>
-                                        <p class="my-fs-xs my-ml-6 my-pl-4">1241<span>*******</span>4520</p>
-                                    </div>
-
-                                    <div class="my-card my-w-50 my-w-sm-100 my-d-flex my-align-center">
-                                        <h5>Total Bill :</h5>
-                                        <h4 class="my-ml-6 my-pl-4"> <i
-                                                class="fa-solid fa-bangladeshi-taka-sign"></i>1200</h4>
-                                    </div>
-
-
                                 </div>
+                            </div>
+
+
+                            <!-- Order Details -->
+                            <div class="my-mt-6 my-grid-2 my-gap-4 my-grid-md-1">
+                                <div>
+                                    <div class="my-card ">
+                                        <h4 class="my-text-left">Other Details</h4>
+                                        <div class="my-justify-center my-align-center my-flex-column my-gap-3 my-mt-2">
+                                            <div class="my-card my-w-50 my-w-sm-100 my-d-flex my-align-center">
+                                                <h5>Order Date :</h5>
+                                                <p class="my-fs-xs my-ml-6 my-pl-4">23 Jan 2024</p>
+                                            </div>
+
+                                            <div class="my-card my-w-50 my-w-sm-100 my-d-flex my-align-center">
+                                                <h5>Bank Info :</h5>
+                                                <p class="my-fs-xs my-ml-6 my-pl-4">1241<span>*******</span>4520</p>
+                                            </div>
+
+                                            <div class="my-card my-w-50 my-w-sm-100 my-d-flex my-align-center">
+                                                <h5>Total Bill :</h5>
+                                                <h4 class="my-ml-6 my-pl-4"> <i
+                                                        class="fa-solid fa-bangladeshi-taka-sign"></i>1200</h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
                                 <div class="my-card">
                                     <h5 class="my-fw-bolder">Ordered items</h5>
                                     <ul
