--- a/test.html
+++ b/test.html
@@ -2,104 +2,86 @@
 <html lang="en">
 
     <head>
-        <meta charset="utf-8" />
-        <title>Swiper demo</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-        <!-- Link Swiper's CSS -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Date Range Picker Example</title>
 
-        <!-- Demo styles -->
+        <!-- Include CSS for Date Range Picker -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.css">
+
+        <!-- Add custom styling -->
         <style>
-            html,
             body {
-                position: relative;
-                height: 100%;
+                font-family: Arial, sans-serif;
+                margin: 20px;
+                padding: 20px;
+                background-color: #f9f9f9;
             }
 
-            body {
-                background: #eee;
-                font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-                font-size: 14px;
-                color: #000;
-                margin: 0;
-                padding: 0;
+            .form-group {
+                margin-bottom: 20px;
             }
 
-            .related-products.swiper {
-                width: 100%;
-                height: 100%;
-                max-height: 400px;
-            }
-
-            .related-products .swiper-slide {
-                text-align: center;
-                font-size: 18px;
-                background: #fff;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-            .related-products .swiper-slide img {
+            label {
                 display: block;
+                margin-bottom: 5px;
+                font-weight: bold;
+            }
+
+            input.form-control {
                 width: 100%;
-                height: 100%;
-                object-fit: cover;
-                align-items: stretch;
+                padding: 10px;
+                font-size: 16px;
+                box-sizing: border-box;
+                border: 1px solid #ccc;
+                border-radius: 4px;
             }
         </style>
     </head>
 
     <body>
-        <!-- Swiper -->
-        <div class="swiper related-products ">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">Slide 1</div>
-                <div class="swiper-slide">Slide 2</div>
-                <div class="swiper-slide">Slide 3</div>
-                <div class="swiper-slide">Slide 4</div>
-                <div class="swiper-slide">Slide 5</div>
-                <div class="swiper-slide">Slide 6</div>
-                <div class="swiper-slide">Slide 7</div>
-                <div class="swiper-slide">Slide 8</div>
-                <div class="swiper-slide">Slide 9</div>
-            </div>
-            <div class="swiper-pagination"></div>
+
+        <div class="destination form-group">
+            <label for="select-date" class="font-weight-bolder fs-16">Select Dates</label>
+            <input type="text" id="select-date" class="form-control" placeholder="Select Dates">
         </div>
 
+        <!-- Include Moment.js -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
 
+        <!-- Include jQuery -->
+        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
-        <!-- Swiper JS -->
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <!-- Include Date Range Picker JS -->
+        <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 
-        <!-- Initialize Swiper -->
+        <!-- Initialize Date Range Picker -->
         <script>
-            var swiper = new Swiper(".related-products", {
-                slidesPerView: 3, // Default for larger devices
-                spaceBetween: 30,
-                freeMode: true,
-                loop: true,
-                autoplay: {
-                    delay: 2500,  // Time between each slide transition in milliseconds (2.5 seconds)
-                    disableOnInteraction: false,  // Keep autoplay running even after user interaction
-                },
-                speed: 600,
-                pagination: {
-                    el: ".swiper-pagination",
-                    clickable: true,
-                },
-                breakpoints: {
-                    // For devices >= 320px (small devices)
-                    320: {
-                        slidesPerView: 1, // Show 1 slide for small devices
-                    },
-                    // For devices >= 768px (medium devices)
-                    768: {
-                        slidesPerView: 3, // Show 3 slides for medium to larger devices
-                    },
-                },
-            });
+            $(document).ready(function () {
+                // Initialize the Date Range Picker
+                $('#select-date').daterangepicker({
+                    opens: 'center', // Opens in the center
+                    autoApply: false, // Show Apply/Cancel buttons
+                    showDropdowns: true, // Dropdown for years and months
+                    minDate: moment(), // Prevent start date from being in the past
+                    locale: {
+                        format: 'MM/DD/YYYY', // Format for date display
+                        separator: ' - ', // Separator between start and end dates
+                        applyLabel: 'Apply',
+                        cancelLabel: 'Cancel',
+                    }
+                }, function (start, end, label) {
+                    // Custom logic to enforce end date is after start date
+                    const startDate = start.format('MM/DD/YYYY');
+                    const endDate = end.format('MM/DD/YYYY');
+                    console.log('Selected range:', startDate, 'to', endDate);
+                });
 
+                // Optional: Open the picker on input click or focus
+                $('#select-date').on('focus click', function () {
+                    $(this).data('daterangepicker').show();
+                });
+            });
         </script>
     </body>
 
