cart page start

--- a/Pages/checkout.html
+++ b/Pages/checkout.html
@@ -700,7 +700,7 @@
 
             <section class="checkout">
                 <div class="my-container">
-                    <div class="head checkout-head">
+                    <div class="head checkout-head my-mt-2">
                         <h2>Checkout</h2>
                         <p class="my-fs-xs">Already have an account? Click here to <a class="my-text-primary my-fw-bold"
                                 href="../Pages/login.html">Sign
@@ -708,7 +708,7 @@
                         </p>
                     </div>
 
-                    <div class="checkout-area my-mt-4">
+                    <div class="checkout-area my-mt-6">
 
                         <!--*****  Left Delivary and Cart  *****-->
                         <div class="left my-flex-column my-gap-10">
