--- a/index.html
+++ b/index.html
@@ -3750,7 +3750,7 @@
 
 
             <section class="section-margin ">
-                <div class="my-container-sm">
+                <div class="my-container my-border my-radius-md">
 
                     <div class="section-head">
                         <h2>Common Question</h2>
@@ -3759,7 +3759,7 @@
 
                     <div class="my-grid-2 my-grid-md-1 accordion-area   my-gap-6">
                         <div>
-                            <img class="max-450  my-radius-md" src="./Static/images/faq.avif" alt="faq">
+                            <img class="max-550   my-radius-md" src="./Static/images/faqs.jpg" alt="faq">
                         </div>
 
 
