about page start

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -9,7 +9,7 @@
             content="Online shopping, Affordable products, Best deals, Discount offers, Buy products online, Shop now, Order online, Top quality products, Fast delivery, Secure online shopping, Product bazaar">
         <link rel="stylesheet" href="../Static/Css/common.css">
         <link rel="stylesheet" href="../Static/Css/pages/other-page.css">
-        <title>Contact_Page</title>
+        <title>About_Page</title>
     </head>
 
     <body>
@@ -690,7 +690,7 @@
                 <div class="my-container   my-pb-0">
                     <ul class="my-d-flex my-mt-2 my-align-center my-gap-5   brigtcamp-area contact-page">
                         <li><a href="../index.html">Home</a> </li>
-                        <li>Contact</li>
+                        <li>About us</li>
                     </ul>
                 </div>
             </section>
@@ -700,87 +700,24 @@
             <!--******  contact area  ******-->
             <section class="">
                 <div class="my-container my-pt-0">
-                    <div class="my-d-none">
-                        <h2>Contact</h2>
-                        <p>24 hour available</p>
+                    <div class="">
+                        <h2>About US</h2>
+                        <p>You can find out a lot of information about us.</p>
                     </div>
 
-                    <div class="contact-page  my-mt-50">
-                        <div class="contact-area  my-bg-white-off my-p-6 my-d-flex my-justify-center my-gap-50">
-
-                            <!--*****  Left Cart  ***** -->
-                            <div class="left-cart my-p-6 my-bg-secondary">
-                                <h2 class="my-text-white">Contact Info</h2>
-                                <ul class="my-flex-column my-gap-6 my-mt-10">
-                                    <li class="my-d-flex my-align-center my-gap-5">
-                                        <div class="cart-icon my-bg-secondary-hover my-text-border2 my-flex-center"><i
-                                                class="fa-solid fa-location-dot"></i></div>
-                                        <div class="data">
-                                            <p>Block A, Road 12, Mirpur 12</p>
-                                            <p>Dhaka , Bangladesh</p>
-                                        </div>
-                                    </li>
-
-                                    <li class="my-d-flex my-align-center my-gap-5">
-                                        <div class="cart-icon my-bg-secondary-hover my-text-border2 my-flex-center"><i
-                                                class="fa-solid fa-mobile-screen"></i></div>
-                                        <div class="data">
-                                            <p>++ 53534 123232 2322</p>
-                                            <p>++ 53534 123232 2222</p>
-                                        </div>
-                                    </li>
-
-                                    <li class="my-d-flex my-align-center my-gap-5">
-                                        <div class="cart-icon my-bg-secondary-hover my-text-border2 my-flex-center"> <i
-                                                class="fa-regular fa-envelope"></i></div>
-                                        <div class="data">
-                                            <p>example@gmail.com</p>
-                                            <p>example232@gmail.com</p>
-                                        </div>
-                                    </li>
-
-                                    <li class="my-d-flex my-align-center my-gap-5">
-                                        <div class="cart-icon my-bg-secondary-hover my-text-border2 my-flex-center"> <i
-                                                class="fas fa-headset"></i></div>
-                                        <div class="data">
-                                            <p>example@gmail.com</p>
-                                            <p>example232@gmail.com</p>
-                                        </div>
-                                    </li>
-
-                                </ul>
-                            </div>
 
 
-                            <!--*****  Right Form  *****-->
-                            <div class="right-form my-bg-secondary my-p-6">
-                                <div class="form  my-bg-border  my-p-6">
-                                    <h3 class="my-title ">Get in Touch</h3>
-                                    <form action=" #" class="card my-flex-column my-gap-5 my-mt-5">
-                                        <div class="my-input-control my-bg-white">
-                                            <label class="label" for="name">Name</label>
-                                            <input type="text" id="name">
-                                        </div>
+                    <div class="my-mt-6 about-us-top my-grid-2 my-grid-md-1">
+                        <div>
 
-                                        <div class="my-input-control my-bg-white ">
-                                            <label class="label" for="Phone">Phone</label>
-                                            <input type="text" id="Phone">
-                                        </div>
+                            <h3></h3>
+                            <p></p>
+                        </div>
 
-                                        <div class="my-input-control my-bg-white">
-                                            <label class="label" for="message">Message</label>
-                                            <textarea name="message" id="message"></textarea>
-                                        </div>
-
-                                        <div class="my-d-flex my-align-center  my-gap-4  my-text-gray">
-                                            <input type="checkbox" class="check-box" id="check">
-                                            <label for="check">Yes, I agree </label>
-                                        </div>
-
-                                        <button class="my-btn my-primary-btn my-mt-6"><span>Submit</span></button>
-                                    </form>
-                                </div>
-                            </div>
+                        <div>
+                            <img class="max-550"
+                                src="https://img.freepik.com/free-vector/company-employees-planning-task-brainstorming_74855-6316.jpg?t=st=1737463481~exp=1737467081~hmac=4966b4efe64e40c4ebd77a24b402d3c51ae0cfaf0d2d96c956f868bcbe4c4930&w=1060"
+                                alt="">
                         </div>
                     </div>
                 </div>
@@ -790,15 +727,7 @@
 
 
             <!--******  Map  ******-->
-            <section>
-                <div class="my-container">
-                    <div class="map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.835434509639!2d144.95373631568216!3d-37.817209979751865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xf577d0d3c1bc8e06!2sGoogle!5e0!3m2!1sen!2sus!4v1617778080320!5m2!1sen!2sus"
-                            width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
-                </div>
-            </section>
+
 
         </main>
 
